tests/integration/error_handling/05_requirement_link_cycles_4_reqs/test.itest
RUN: %expect_exit 1 %strictdoc export %S | filecheck %s --dump-input=fail
CHECK: error: document tree: a cycle detected: requirements in the document tree must not reference each other.
CHECK: Problematic UID: REQ-001
CHECK: Cycle: REQ-001, REQ-004, REQ-003, REQ-002
